--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ testStatistics
 testDeath1
 testDeath2
 testCollision
+testGregarious
+testKamikaze
+testFearful
+testBehaviours
+testMultipleBehaviours
