added behaviours test files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,18 @@
 *.o
 *.csv
 main
+
+
 testStatistics
+
 testDeath1
 testDeath2
 testCollision
+
+testPetFactory
+
+testGregarious
+testKamikaze
+testBehaviours
+testFearful
+testMultipleBehaviours
